@@ -77,6 +77,24 @@ p.append(params{"acceptance", 3.14159});
 Each of these examples will produce the same list of parameters.
 
 
+Encodings and complex parameters
+--------------------------------
+
+For some parameter types, the `params` code will need to know about the text
+encoding.  This happens especially with composite types.  You may see errors
+about the encoding not being known.
+
+To prevent that, pass as your first parameter the @ref pqxx::encoding_group for
+the connection's current client encoding.  You can get this by calling the
+connection's `get_encoding_group()` member function, but as a shortcut, you may
+just pass in a reference to your connection or your transaction instead.  Or if
+you already had a `pqxx::conversion_context`, you can pass that instead.
+
+In those cases, that special first argument will _not_ become a parameter to
+the SQL statement.  It will only be used to obtain the necessary text encoding
+information.
+
+
 Generating placeholders
 -----------------------
 
